Optimize code / remove warnings